--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <h2>Library Information</h2>
         <p><strong>Address:</strong> 1526 Book Lane, Vallejo, CA</p>
         <p>
-          <strong>Opening Hours:</strong> Mon-Fri: 8am - 6pm, Sat: 10am - 5pm,
-          Sun: Closed
+          <strong>Opening Hours:</strong> Mon-Fri: 8am - 6pm, Sat: 10am - 5pm, Sun: Closed
         </p>
       </section>
 
@@ -41,9 +40,7 @@
     <footer>
       <p>
         Contact us:
-        <a href="mailto:support@vallejolibrary.com"
-          >support@vallejolibrary.com</a
-        >
+        <a href="mailto:support@vallejolibrary.com">support@vallejolibrary.com</a>
       </p>
       <p>© 2024 Vallejo Public Library</p>
     </footer>
