--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,7 @@
         <p><strong>Address:</strong> 1526 Book Lane, Vallejo, CA</p>
         <p>
           <strong>Email:</strong>
-          <a href="mailto:support@vallejolibrary.com"
-            >support@vallejolibrary.com</a
-          >
+          <a href="mailto:support@vallejolibrary.com">support@vallejolibrary.com</a>
         </p>
         <p><strong>Phone:</strong> (123) 456-7890</p>
       </section>
@@ -54,9 +52,7 @@
     <footer>
       <p>
         Contact us:
-        <a href="mailto:support@vallejolibrary.com"
-          >support@vallejolibrary.com</a
-        >
+        <a href="mailto:support@vallejolibrary.com">support@vallejolibrary.com</a>
       </p>
       <p>© 2024 Vallejo Public Library</p>
     </footer>
