--- a/book.html
+++ b/book.html
@@ -36,9 +36,7 @@
     <footer>
       <p>
         Contact us:
-        <a href="mailto:support@vallejolibrary.com"
-          >support@vallejolibrary.com</a
-        >
+        <a href="mailto:support@vallejolibrary.com">support@vallejolibrary.com</a>
       </p>
       <p>© 2024 Vallejo Public Library</p>
     </footer>
