Made some changes to book-catalog and library-card.

--- a/book-catalog.html
+++ b/book-catalog.html
@@ -11,7 +11,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="book.html">Catalog</a></li>
+          <li><a href="book-catalog.html">Catalog</a></li>
+          <li><a href="news.html">News</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
@@ -28,7 +29,8 @@
           mysterious millionaire Jay Gatsby and his obsession with Daisy
           Buchanan.
         </p>
-        <p><strong>Copies Available:</strong> 5 copies total, 2 available</p>
+        <p><strong>Total Copies:</strong> 5</p>
+        <p><strong>Available Copies:</strong> 2</p>
         <p><a href="reserve.html">Reserve a Copy</a></p>
       </section>
     </main>
