--- a/index.html
+++ b/index.html
@@ -11,13 +11,33 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="book.html">Catalog</a></li>
+          <li><a href="library-card.html">Library Card</a></li>
+          <li><a href="book-catalog.html">Book Catalog</a></li>
+          <li><a href="news.html">News</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
+      <section>
+        <h2>Overview of the Website</h2>
+        <p>
+          Welcome to the Vallejo Public Library! Explore our resources and
+          services below.
+        </p>
+      </section>
+
+      <section>
+        <h2>Quick Links</h2>
+        <ul>
+          <li><a href="library-card.html">Apply for a Library Card</a></li>
+          <li><a href="book-catalog.html">Search the Book Catalog</a></li>
+          <li><a href="news.html">Latest News</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </section>
+
       <section>
         <h2>Library Information</h2>
         <p><strong>Address:</strong> 1526 Book Lane, Vallejo, CA</p>
@@ -26,22 +46,11 @@
           Sun: Closed
         </p>
       </section>
-
-      <section>
-        <h2>Latest News</h2>
-        <p>Check out the latest events and updates from our library.</p>
-      </section>
-
-      <section>
-        <h2>Get a Library Card</h2>
-        <p><a href="contact.html">Click here to apply for a library card</a></p>
-      </section>
     </main>
 
     <footer>
       <p>
-        Contact us:
-        <a href="mailto:support@vallejolibrary.com"
+        Contact us:<a href="mailto:support@vallejolibrary.com"
           >support@vallejolibrary.com</a
         >
       </p>
