--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <section>
         <h2>Overview of the Website</h2>
         <p>
-          Welcome to the Vallejo Public Library! Explore our resources and
-          services below.
+          Welcome to the Vallejo Public Library! Explore our resources and services below.
         </p>
       </section>
 
@@ -42,17 +41,14 @@
         <h2>Library Information</h2>
         <p><strong>Address:</strong> 1526 Book Lane, Vallejo, CA</p>
         <p>
-          <strong>Opening Hours:</strong> Mon-Fri: 8am - 6pm, Sat: 10am - 5pm,
-          Sun: Closed
+          <strong>Opening Hours:</strong> Mon-Fri: 8am - 6pm, Sat: 10am - 5pm, Sun: Closed
         </p>
       </section>
     </main>
 
     <footer>
       <p>
-        Contact us:<a href="mailto:support@vallejolibrary.com"
-          >support@vallejolibrary.com</a
-        >
+        Contact us:<a href="mailto:support@vallejolibrary.com">support@vallejolibrary.com</a>
       </p>
       <p>© 2024 Vallejo Public Library</p>
     </footer>
